# meeting_translator

./: .env.example  .gitignore  CLIENT_REFACTOR_PLAN.md  LICENSE  MODIFICATION_VERIFICATION.md  OUTPUT_MANAGER_README.md  QWEN_OUTPUT_INTEGRATION.md  QWEN_OUTPUT_SIMPLE.md  README.md  pyproject.toml  requirements.txt  run.bat
docs/: GLOSSARY_GUIDE.md  USAGE.md
meeting_translator/: __init__.py  audio_capture_thread.py  audio_device_manager.py  audio_output_thread.py  client_audio_mixin.py  client_output_mixin.py  config_manager.py  doubao_client.py  glossary.json  glossary_manager.py  i18n.py  livetranslate_client.py  livetranslate_text_client.py  main_app.py  openai_client.py  openai_realtime_client.py  output_formatters.py  output_handlers.py  output_manager.py  paths.py  qwen_client.py  qwen_output_integration.py  subtitle_window.py  translation_client_base.py  translation_client_factory.py  translation_mode.py  translation_service.py  voice_sample_generator.py  whisper_translation_client.py
meeting_translator/locales/: en_US.json  zh_CN.json
meeting_translator/styles/: modern_style.qss
