[project]
name = "meeting-translator"
version = "1.0.0"
description = "Real-time meeting translation system with zero latency (会议翻译工具)"
authors = [{name = "Ren Yuan"}]
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}

dependencies = [
    # Core Dependencies / 核心依赖
    "numpy==1.24.3",
    "pyaudio==0.2.14",
    "websockets==12.0",
    "python-dotenv==1.0.0",

    # GUI / 图形界面
    "PyQt5==5.15.10",
]

[project.optional-dependencies]
# Doubao (ByteDance) provider dependencies
# 豆包（字节跳动）提供商依赖
doubao = [
    "protobuf>=4.25.1",
]

# OpenAI provider dependencies (Realtime API & GPT Translation)
# OpenAI 提供商依赖（实时 API 和 GPT 翻译）
openai = [
    "openai>=1.0.0",
]

# All providers (install all optional dependencies)
# 所有提供商（安装所有可选依赖）
all = [
    "protobuf>=4.25.1",
    "openai>=1.0.0",
]

# Note: pyaudiowpatch (Windows WASAPI support) must be installed manually on Windows
# Windows 用户请手动安装 pyaudiowpatch: pip install pyaudiowpatch==0.2.12.13

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeting_translator"]

[tool.uv]
# UV-specific configuration
